syntax = "proto3";

package service.chn;
option go_package = "chn";

service StoryService {
    rpc Stories(StoryReq) returns (StoryResp);
}

message StoryReq {
    string category = 1;
}

message StoryResp {
    repeated Story stories = 1;
}

message Story {
    string by = 1;
    int64  descendants = 2;
    int64  id = 3;
    repeated int64 kids = 4;
    int64 score = 5;
    string type = 6;
    string title = 7;
    string url = 8;
    string domainName = 9;
}
